fix register dialog overflow bug

--- a/plugs/layout/bootstrap/static/bootstrap_extend.css
+++ b/plugs/layout/bootstrap/static/bootstrap_extend.css
@@ -551,6 +551,7 @@ margin-top:50px;
 -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.5);
    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.5);
         box-shadow: 0 1px 2px rgba(0,0,0,.5);
+overflow:hidden;
 }
 #login-container .box h2{background-image:none;background-color:#ccc;color:#000;border-bottom:0;font-size:20px;text-align:center;padding:10px 0px;margin:-10px -10px 40px -10px;filter:none;}
 #login-container .form-horizontal .control-group{margin-bottom:8px}
